--- a/app/templates/security/login.html.twig
+++ b/app/templates/security/login.html.twig
@@ -21,6 +21,7 @@
                         <input type="password" name="password" id="inputPassword" class="form-control" required>
                     </div>
                     <div class="col-12">
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('auth_csrf_token') }}">
                         <button class="btn btn-lg btn-primary float-end" type="submit">
                             Sign in
                         </button>
